# easyshare

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.distributed.example.yml  docker-compose.example.yml  docker-compose.yml  renovate.json
.forgejo/: PULL_REQUEST_TEMPLATE.md
.forgejo/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.forgejo/workflows/: backend.yml  conventional-commits.yml  docker-image.yml  frontend.yml  openapi-types-drift.yml  renovate.yml
.github/: copilot-instructions.md
.github/workflows/: backend.yml  conventional-commits.yml  frontend.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1b6f0310842f_initial_schema.py  a1c3e5f7b9d2_add_login_lockout_columns.py  a9e3c1d5b7f0_add_audit_log_composite_indexes.py  b2d4f6a8c0e1_add_audit_log.py  b9d2f4a6c8e0_add_upload_sessions.py  c3e5a7b9d1f2_add_is_admin_and_audit_package_id.py  d4f6b8a0c2e3_widen_package_files_size_to_bigint.py  e7b1c4d9f2a3_add_storage_quota_and_download_count.py  f8c2a3b5d7e9_add_share_expiry_view_count_codes.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: admin.py  admin_settings.py  audit.py  auth.py  packages.py  public.py  shares.py  uploads.py
backend/app/core/: audit.py  config.py  logging.py  middleware.py  rate_limit.py  security.py  sentry.py  static.py  tasks.py  utils.py
backend/app/db/: pagination.py  session.py
backend/app/models/: __init__.py  models.py
backend/app/schemas/: schemas.py
backend/app/services/: archive.py  chunked.py  counters.py  email.py  files.py  quota.py  storage.py  storage_s3.py  validation.py
backend/scripts/: export_openapi.py
backend/tests/: conftest.py  test_admin_api.py  test_admin_settings.py  test_audit.py  test_audit_api.py  test_auth.py  test_config.py  test_counters.py  test_email.py  test_health.py  test_middleware.py  test_packages.py  test_quota.py  test_sentry.py  test_shares.py  test_storage.py  test_uploads.py
frontend/: .dockerignore  .eslintrc.cjs  .gitignore  Dockerfile  README.md  env.d.ts  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/public/: theme-init.js
frontend/src/: App.vue  main.ts
frontend/src/api/: client.ts  index.ts  types.ts
frontend/src/assets/: main.css
frontend/src/components/: AuditLogTable.vue  ThemeToggle.vue  UploadIndicator.vue
frontend/src/components/ui/: Alert.vue  Button.vue  Card.vue  CardContent.vue  CardDescription.vue  CardFooter.vue  CardHeader.vue  CardTitle.vue  Checkbox.vue  ConfirmDialog.vue  Input.vue  Label.vue  NavigationProgress.vue  Pagination.vue  PasswordInput.vue  PasswordStrength.vue  QrCode.vue  Skeleton.vue  Toast.vue  Toaster.vue  Tooltip.vue  index.ts
frontend/src/composables/: useArchiveDownload.ts  useConfirm.ts  useDocumentTitle.ts  useNavigationProgress.ts  useNetworkStatus.ts  useResumableUploads.ts  useToasts.ts  useUploads.ts
frontend/src/lib/: chunkedUpload.ts  clipboard.ts  download.ts  fileIcon.ts  format.ts  passwordStrength.ts  redirect.ts  severity.ts  transferRate.ts  validation.ts
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  theme.ts  toast.ts
frontend/src/test/: Button.test.ts  Pagination.test.ts  api.test.ts  chunkedUpload.test.ts  clipboard.test.ts  download.test.ts  fileIcon.test.ts  lib.test.ts  passwordStrength.test.ts  redirect.test.ts  setup.ts  toast.test.ts  transferRate.test.ts  useConfirm.test.ts  useToasts.test.ts  useUploads.test.ts  validation.test.ts
frontend/src/types/: api.generated.ts
frontend/src/views/: ActivityView.vue  AdminAuditView.vue  AdminSettingsView.vue  AdminUsersView.vue  DashboardView.vue  LoginView.vue  NotFoundView.vue  PackageView.vue  ProfileView.vue  RegisterView.vue  ShareView.vue
