[project]
name = "easyshare-backend"
version = "0.1.0"
description = "EasyShare backend - secure file/package sharing API"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.111,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "python-jose[cryptography]>=3.3,<4.0",
    "pwdlib[argon2]>=0.2,<1.0",
    "python-multipart>=0.0.9,<1.0",
    "email-validator>=2.1,<3.0",
    "safeuploads[fastapi]>=1.0,<2.0",
    "slowapi>=0.1.9,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9.0",
    "pytest-cov>=5.0,<6.0",
    "httpx>=0.27,<1.0",
    "mypy>=1.10,<2.0",
    "ruff>=0.5,<1.0",
    "types-python-jose>=3.3,<4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
# B008: FastAPI uses File()/Query()/Depends() in argument defaults by design.
# S105/S107: false positives on "bearer"/test password literals.
# UP042: str+Enum is intentional for JSON serialisation with Pydantic.
ignore = ["S101", "B008", "S105", "S107", "UP042"]

[tool.ruff.lint.per-file-ignores]
"app/tests/*" = ["S101"]
"tests/*" = ["S101", "S105", "S106"]

[tool.mypy]
python_version = "3.13"
plugins = ["pydantic.mypy"]
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = ["alembic/"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
