[project]
name = "easyshare-backend"
version = "0.4.0"
description = "EasyShare backend - secure file/package sharing API"
authors = [{ name = "João Vitória Silva" }]
# Upper bound pins the supported interpreter range; the lock resolves within it.
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi>=0.111,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "joserfc>=1.0,<2.0",
    "pwdlib[argon2]>=0.2,<1.0",
    "python-multipart>=0.0.9,<1.0",
    "email-validator>=2.1,<3.0",
    "safeuploads[fastapi]>=1.0,<2.0",
    "slowapi>=0.1.9,<1.0",
]

# Optional runtime extras, installed only for deployments that need them:
#   pip install "easyshare-backend[s3]"        # S3-compatible object storage
#   pip install "easyshare-backend[redis]"     # shared rate-limit store (distributed)
#   pip install "easyshare-backend[postgres]"  # PostgreSQL driver (shared database)
[project.optional-dependencies]
s3 = ["boto3>=1.34,<2.0"]
redis = ["redis>=5.0,<6.0"]
postgres = ["psycopg[binary]>=3.1,<4.0"]

# PEP 735 dependency groups: development-only tooling, never shipped in the
# image (`uv export --no-dev`). ``uv sync`` installs the ``dev`` group by
# default; use ``uv sync --no-dev`` for a production-parity environment.
[dependency-groups]
lint = [
    "ruff>=0.5,<1.0",
]
typecheck = [
    "mypy>=1.10,<2.0",
]
test = [
    "pytest>=8.2,<9.0",
    "pytest-cov>=5.0,<6.0",
    "httpx>=0.27,<1.0",
    # Installed for tests so the S3 storage backend can be exercised; excluded
    # from the production image (`uv export --no-dev`).
    "boto3>=1.34,<2.0",
]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "typecheck" },
]

[tool.uv]
# Pin the resolver version so every developer/CI run produces the same lock.
required-version = "0.11.18"
# Supply-chain cooling-off: never resolve a release published in the last 30
# days, so a freshly-compromised version can't slip into a lock refresh.
exclude-newer = "30 days"

# Pin the package index explicitly rather than relying on ambient config.
[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.sdist]
only-include = ["app"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit (security)
    "A",    # flake8-builtins
    "T20",  # flake8-print (no stray print/pprint)
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
# B008: FastAPI uses File()/Query()/Depends() in argument defaults by design.
# S105/S107: false positives on "bearer"/test password literals.
# UP042: str+Enum is intentional for JSON serialisation with Pydantic.
ignore = ["B008", "S105", "S107", "UP042"]

[tool.ruff.lint.per-file-ignores]
# Tests use asserts (S101), password-like literals (S105/S106) and mirror the
# app's PascalCase sessionmaker name (N806) by design.
"tests/*" = ["S101", "S105", "S106", "N806"]
# ORM/schema models legitimately expose an ``id`` attribute (A003).
"app/models/*" = ["A003"]
"app/schemas/*" = ["A003"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/"]

# safeuploads ships no py.typed marker; treat it as untyped so strict mode does
# not fail on its imports.
[[tool.mypy.overrides]]
module = ["safeuploads", "safeuploads.*"]
ignore_missing_imports = true

# boto3/botocore ship no (or only partial) type information; treat them as
# untyped so strict mode does not fail on the optional S3 backend.
[[tool.mypy.overrides]]
module = ["boto3", "boto3.*", "botocore", "botocore.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:slowapi.*",
]

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/__pycache__/*", "*/alembic/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
